--- a/audio_analyser.html
+++ b/audio_analyser.html
@@ -59,7 +59,7 @@
         outputs: 1,
         icon: "arrows.png",
         label: function() {
-            return this.name || "WAV headers";
+            return this.name || "Audio analyser";
         }
     });
 </script>
