fftSize always visible

--- a/audio_analyser.html
+++ b/audio_analyser.html
@@ -26,7 +26,7 @@
         <label for="node-input-maxDecibels"><i class="fa fa-level-down"></i> Max db</label>
         <input type="number" id="node-input-maxDecibels" step="1" pattern="\d*">
     </div>
-    <div class="form-row node-input-frequency-row">
+    <div class="form-row">
         <label for="node-input-fftSize"><i class="fa fa-barcode"></i> FFT size</label>
         <select id="node-input-fftSize">
             <option value="32">32</option>
